--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,23 @@
-<!-- activity_home.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- RecyclerView takes the remaining space -->
+    <!-- Toolbar at the top -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="Home"
+        app:titleTextColor="@color/white"
+        android:textColor="@color/white"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewReviews"
         android:layout_width="match_parent"
@@ -26,16 +38,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Review"
-            android:layout_marginEnd="16dp"
-        />
+            android:layout_marginEnd="16dp"/>
 
         <!-- My Reviews Button -->
         <Button
             android:id="@+id/btnMyReviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Reviews"
-            />
+            android:text="My Reviews"/>
     </LinearLayout>
 
 </LinearLayout>
