--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Updated to use MaterialComponents -->
-    <style name="Theme.TopReview" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Updated to use MaterialComponents without default ActionBar -->
+    <style name="Theme.TopReview" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
