--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <!-- ViewModel or LiveData variables can go here -->
+        <!-- You can declare LiveData or ViewModel bindings here if needed -->
     </data>
 
     <RelativeLayout
