--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <!-- Edit Icon (Pencil) on the top-right -->
         <ImageView
             android:id="@+id/imageEditReview"
             android:layout_width="24dp"
@@ -33,7 +32,6 @@
             android:layout_marginBottom="8dp" />
 
 
-        <!-- Profile Image -->
         <FrameLayout
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -72,7 +70,30 @@
                 android:textColor="#212121"/>
         </LinearLayout>
 
-        <!-- Description Row (Label + Value) -->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="City:"
+                android:textSize="14sp"
+                android:textColor="#212121"
+                android:textStyle="bold"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:id="@+id/textViewCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tel Aviv"
+                android:textSize="14sp"
+                android:textColor="#757575" />
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -99,7 +120,6 @@
 
         </LinearLayout>
 
-        <!-- Rating Row (Label + Value) -->
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
